--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Mulish:wght@300;400;500;600;700;800&display=swap');
 
 *{
-    font-family: 'Lato', sans-serif;
+    font-family: 'Mulish', sans-serif;
    }
